Added Favicon to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dinesh Kumar | Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Title -->
+    <title>TEST Dinesh Kumar | Home</title>
+
+    <!-- Favicon -->
+    <link id='favicon' rel="shortcut icon" href="/images/dinesh.jpg" type="image/x-jpg">
+    
 </head>
 <body>
     
