Added Images and fonts folder

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title -->
-    <title>TEST Dinesh Kumar | Home</title>
+    <title>Dinesh Kumar | Home</title>
 
     <!-- Favicon -->
     <link id='favicon' rel="shortcut icon" href="/images/dinesh.jpg" type="image/x-jpg">
-    
+
 </head>
 <body>
     
