--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +12,13 @@
     <!-- Favicon -->
     <link id='favicon' rel="shortcut icon" href="/images/dinesh.jpg" type="image/x-jpg">
 
+    <!-- Google Icon Font-->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
