--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
 
 </head>
 
-<body>
+<body class="no-scroll-preload">
 
+    <!-- loader -->
+    <div class="loader-container">
+        <div class="atom">
+            <div class="electron"></div>
+            <div class="electron neutron"></div>
+            <div class="electron proton"></div>
+        </div>
+    </div>
     <!-- Bootstrap Library -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
