--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 
+     <!-- External CSS Links -->
+     <link rel="stylesheet" href="Styles/preloader.css">
+
     <!-- Jquery External Library-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -34,7 +37,7 @@
             <div class="electron proton"></div>
         </div>
     </div>
-    
+
     <!-- Bootstrap Library -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
