--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 
-     <!-- External CSS Links -->
-     <link rel="stylesheet" href="Styles/preloader.css">
+    <!-- External CSS Links -->
+    <link rel="stylesheet" href="Styles/preloader.css">
 
     <!-- Jquery External Library-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
+    <!-- External JavaScript -->
+    <script src="/Scripts/titleChange.js"></script>
 </head>
 
 <body class="no-scroll-preload">
