changed favicon image format

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Dinesh Kumar | Home</title>
 
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="/images/dinesh.jpg" type="image/x-jpg">
+    <link id='favicon' rel="shortcut icon" href="/images/dinesh.png" type="image/x-png">
 
     <!-- Google Icon Font-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
