--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <!-- External CSS Links -->
     <link rel="stylesheet" href="Styles/preloader.css">
 
+    <!-- Font Awesome Icons -->
+    <script src='https://kit.fontawesome.com/1f2bb007df.js'></script>
+
     <!-- Jquery External Library-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
