--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         </div>
     </div>
 
+    <!--Particles effect-->
+    <div id="home">
+        <div id="particles-js"></div>
+    </div>
+
+
     <!-- Bootstrap Library -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
