--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <div id="particles-js"></div>
     </div>
 
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="/Scripts/app.js"></script>
 
     <!-- Bootstrap Library -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
