styles of body to keep particles in screen size

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
     <!-- Particles Library-->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js'></script>
-    <script src="particles.js"></script>
+    <script src="/Scripts/particles.js"></script>
+
 </body>
 
 </html>
