--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
     <!-- External CSS Links -->
     <link rel="stylesheet" href="Styles/preloader.css">
-    <link src="stylesheet" href="/Styles/app.cs" <link rel="stylesheet" href="/Styles/index.css">
+    <link src="stylesheet" href="/Styles/app.cs">
+    <link rel="stylesheet" href="/Styles/index.css">
 
     <!-- Font Awesome Icons -->
     <script src='https://kit.fontawesome.com/1f2bb007df.js'></script>
