--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" light-mode="light">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 
     <!-- External CSS Links -->
-    <link rel="stylesheet" href="Styles/preloader.css">
+    <link rel="stylesheet" href="/Styles/preloader.css">
     <link src="stylesheet" href="/Styles/app.css">
     <link rel="stylesheet" href="/Styles/index.css">
 
