changed link tag of app.css in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- External CSS Links -->
     <link rel="stylesheet" href="/Styles/preloader.css">
-    <link src="stylesheet" href="/Styles/app.css">
+    <link rel="stylesheet" href="/Styles/app.css">
     <link rel="stylesheet" href="/Styles/index.css">
 
     <!-- Font Awesome Icons -->
