--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <span class="animated-text" data-words="Web Development, UI/UX, React-Js"></span>
             </span>
             <div class="social-icons">
-                <a class="socialicon twitter" href="" target="_blank" rel="author">
+                <a class="socialicon twitter" href="https://twitter.com/kumardinesh1908" target="_blank" rel="author">
 
                     <svg class="twitter-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500"
@@ -129,7 +129,7 @@
                     </svg>
                 </a>
 
-                <a class="socialicon linkedin" href="" target="_blank" rel="author">
+                <a class="socialicon linkedin" href="https://www.linkedin.com/in/dinesh-kumar-29a310ab/" target="_blank" rel="author">
                     <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="35" viewBox="0 0 24 24"
                         fill="#0e76a8" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
                         class="feather feather-linkedin">
@@ -139,7 +139,7 @@
                     </svg>
                 </a>
 
-                <a class="socialicon instagram" href="" target="_blank" rel="author">
+                <a class="socialicon instagram" href="https://www.instagram.com/dineshrao1908/" target="_blank" rel="author">
                     <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5"
                         style="enable-background:new 0 0 202.5 202.5;">
                         <circle id="littleCircle" class="st0" cx="101" cy="101.5" r="18.9" />
@@ -150,7 +150,7 @@
                     </svg>
                 </a>
 
-                <a class="socialicon github" href="" target="_blank" rel="author">
+                <a class="socialicon github" href="https://github.com/Kumardinesh1908/" target="_blank" rel="author">
                     <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
                         <path id="body" d="M112.5,234.4v43.1c24.5,7.5,50.5,7.5,75,0V225c-0.4-11.1-4.9-21.6-12.7-29.6c30-3.4,59.5-23.5,59.5-64.1
                                                                 c0.9-13.9-3.3-27.7-11.8-38.7c4.1-11.6,3.7-24.4-1.3-35.7c0,0-11.2-3.7-37.5,13.8c-22.1-6.1-45.3-6.1-67.4,0
