--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,7 @@
     <!-- External CSS Links -->
     <link rel="stylesheet" href="/Styles/preloader.css">
     <link rel="stylesheet" href="/Styles/app.css">
+    <link rel="stylesheet" href="/Styles/portfolio.css">
 
     <!-- Font Awesome Icons -->
     <script src='https://kit.fontawesome.com/1f2bb007df.js'></script>
@@ -44,7 +45,258 @@
         </div>
     </div>
 
+    <section id="portfolio">
+        <h1 class="section-heading">
+            <span>
+                <i class="fa-sharp fa-solid fa-list"></i>
+            </span>
+            <span>Portfolio</span>
+        </h1>
+        <div id="portfolio-container">
 
+            <div class="portfolio-details-container">
+                <div class="portfolio-image">
+                    <a href="https://amazon-clone-kumardinesh1908.vercel.app/" target="_blank"
+                        title="Click here to explore The Amazon Clone">
+                        <img src="/images/amazon.png">
+                    </a>
+                </div>
+                <div class="portfolio-details">
+                    <a href="https://amazon-clone-kumardinesh1908.vercel.app/" target="_blank"
+                        title="Click here to explore The Amazon Clone">
+                        <h2>The Amazon Clone</h2>
+                    </a>
+                    <h4>
+                        A fully functional Amazon clone built with <span>React</span>, <span>Tailwind
+                            CSS</span>,<span> Redux Toolkit</span>, <span>Firebase</span>, Framer Motion and more!
+                    </h4>
+                    <h3>Feathers :</h3>
+                    <ul>
+                        <li>Product Listings, Product Search and Product Details.</li>
+                        <li>User Registration and Login.</li>
+                        <li>Add, Delete and Edit Cart.</li>
+                        <li>Filter based on Rating, Price and Category.</li>
+                        <li>Sort based on High Price, Low Price and Rating.</li>
+                        <li>Order History, Cancel and Return Order.</li>
+                        <li>Save Multiple Addresses.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="portfolio-details-container">
+                <div class="portfolio-image">
+                    <a href="https://e-commerce-kumardinesh1908.vercel.app/" target="_blank"
+                        title="Click here to visit the E-Commerce website">
+                        <img src="/images/ecommerce.png">
+                    </a>
+                </div>
+                <div class="portfolio-details">
+                    <a href="https://e-commerce-kumardinesh1908.vercel.app/" target="_blank"
+                        title="Click here to visit the E-Commerce website">
+                        <h2>E-commerce</h2>
+                    </a>
+                    <h4>
+                        E-commerce web application built with <span>React</span>, <span>Tailwind CSS</span>,
+                        <span>Rest APIs</span> and <span>Local Storage</span>.
+                    </h4>
+                    <h3>Feathers :</h3>
+                    <ul>
+                        <li>Browse a list of products.</li>
+                        <li>View detailed product information.</li>
+                        <li>Add products to the shopping cart.</li>
+                        <li>Edit product information.</li>
+                        <li>Manage and update the shopping cart.</li>
+                        <li>Checkout and complete the purchase.</li>
+                        <li>Error handling for various scenarios.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="portfolio-details-container">
+                <div class="portfolio-image">
+                    <a href="https://netflix-clone-five-neon.vercel.app/" target="_blank">
+                        <img src="/images/NetFlix Image.png">
+                    </a>
+                </div>
+                <div class="portfolio-details">
+                    <h2>Netflix Clone</h2>
+                    <h4>
+                        A fully functional Netflix Clone Web application developed using
+                        <span>TMDB API</span>, <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
+                    </h4>
+                    <h3>Feathers :</h3>
+                    <ul>
+                        <li>
+                            Search for movies and TV shows.
+                        </li>
+                        <li>
+                            View movie and TV show details.
+                        </li>
+                        <li>
+                            Favorite Movies Page.
+                        </li>
+                        <li>
+                            Add movies and TV shows to Favorites.
+                        </li>
+                        <li>
+                            Remove movies and TV shows from Favorites.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="portfolio-details-container">
+                <div class="portfolio-image">
+                    <a href="https://kumardinesh1908.github.io/Todo-List-App/" target="_blank"
+                        title="Click here to use the Todo List App">
+                        <img src="/images/todolist.png">
+                    </a>
+                </div>
+                <div class="portfolio-details">
+                    <a href="https://kumardinesh1908.github.io/Todo-List-App/" target="_blank"
+                        title="Click here to use the Todo List App">
+                        <h2>ToDo List</h2>
+                    </a>
+                    <h4>
+                        A ToDO Liat web application implemented using <span>JavaScript</span>, <span>HTML</span> and
+                        <span>CSS</span>.
+                    </h4>
+                    <h3>Feathers :</h3>
+                    <ul>
+                        <li>Add tasks to the list.</li>
+                        <li>Mark tasks as completed.</li>
+                        <li>Delete tasks from the list.</li>
+                        <li>Filter tasks by completed or uncompleted status.</li>
+                        <li>Mark all tasks as completed.</li>
+                        <li>Clear completed tasks.</li>
+                        <li>Data persistence using local storage.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="portfolio-details-container">
+                <div class="portfolio-image">
+                    <a href="https://kumardinesh1908.github.io/Weather-App/" target="_blank"
+                        title="Click here to check the Weather App">
+                        <img src="/images/weather.png">
+                    </a>
+                </div>
+                <div class="portfolio-details">
+                    <a href="https://kumardinesh1908.github.io/Weather-App/" target="_blank"
+                        title="Click here to check the Weather App">
+                        <h2>The Weather App</h2>
+                    </a>
+                    <h4>
+                        Developed a real-time weather web application using <span>HTML</span>, <span>CSS</span> and
+                        <span>JavaScript</span>.
+                    </h4>
+                    <h3>Feathers :</h3>
+                    <ul>
+                        <li>
+                            Displays weather conditions.
+                        </li>
+                        <li>
+                            Find weather by city name.
+                        </li>
+                        <li>
+                            Fetches weather by location.
+                        </li>
+                        <li>
+                            User-friendly errors.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="portfolio-details-container">
+                <div class="portfolio-image">
+                    <a href="https://kumardinesh1908.github.io/Calculator/" target="_blank"
+                        title="Click here to use the Calculator">
+                        <img src="/images/calculator.png">
+                    </a>
+                </div>
+                <div class="portfolio-details">
+                    <a href="https://kumardinesh1908.github.io/Calculator/" target="_blank"
+                        title="Click here to use the Calculator">
+                        <h2>Calculator</h2>
+                    </a>
+                    <h4>
+                        Implemented using <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
+                    </h4>
+                    <h3>Feathers :</h3>
+                    <ul>
+                        <li> Addition (+)</li>
+                        <li>Subtraction (-)</li>
+                        <li>Multiplication (*)</li>
+                        <li>Division (/)</li>
+                        <li>Percentage (%)</li>
+                        <li>Sign Change (+/-)</li>
+                        <li>Clear All (AC)</li>
+                        <li>Decimal Point (.)</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="portfolio-details-container">
+                <div class="portfolio-image">
+                    <a href="https://kumardinesh1908.github.io/Tic-Tac-Toe/" target="_blank"
+                        title="Click here to play Tic-Tac-Toe">
+                        <img src="/images/tic-tac.png">
+                    </a>
+                </div>
+                <div class="portfolio-details">
+                    <a href="https://kumardinesh1908.github.io/Tic-Tac-Toe/" target="_blank"
+                        title="Click here to play Tic-Tac-Toe">
+                        <h2>Tic-Tac-Toe Game</h2>
+                    </a>
+                    <h4>
+                        Implemented using <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
+                    </h4>
+                    <h3>Feathers :</h3>
+                    <ul>
+                        <li>
+                            2-player gameplay.
+                        </li>
+                        <li>
+                            Turn-based gameplay.
+                        </li>
+                        <li>
+                            Win condition checking.
+                        </li>
+                        <li>
+                            Draw condition checking.
+                        </li>
+                        <li>
+                            Restart functionality.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="portfolio-details-container">
+                <div class="portfolio-image">
+                    <a href="https://kumardinesh1908.github.io/Analog-and-Digital-Clock/" target="_blank"
+                        title="Click here to view the Analog and Digital Clock">
+                        <img src="/images/clock.png">
+                    </a>
+                </div>
+                <div class="portfolio-details">
+                    <a href="https://kumardinesh1908.github.io/Analog-and-Digital-Clock/" target="_blank"
+                        title="Click here to view the Analog and Digital Clock">
+                        <h2>Analog/Digital Clock</h2>
+                    </a>
+                    <h4>
+                        Developed using <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.
+                    </h4>
+                    <h3>Feathers :</h3>
+                    <ul>
+                        <li>
+                            Dynamic Analog Clock hands Representation.
+                        </li>
+                        <li>
+                            A 12-hour format Digital time display.
+                        </li>
+                        <li>
+                            Real-Time Updates.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!--JavaScript at end of body for optimized loading-->
     <script src="/Scripts/app.js"></script>
