--- a/experience.html
+++ b/experience.html
@@ -21,6 +21,7 @@
     <!-- External CSS Links -->
     <link rel="stylesheet" href="/Styles/preloader.css">
     <link rel="stylesheet" href="/Styles/app.css">
+    <link rel="stylesheet" href="/Styles/education&experience.css">
 
     <!-- Font Awesome Icons -->
     <script src='https://kit.fontawesome.com/1f2bb007df.js'></script>
@@ -43,6 +44,63 @@
             <div class="electron proton"></div>
         </div>
     </div>
+
+    <section id="experience">
+        <h1 class="section-heading">
+            <span>
+                <i class="fa-solid fa-briefcase"></i>
+            </span>
+            <span>Work Experience</span>
+        </h1>
+        <div class="box-container">
+
+            <div class="box">
+                <div class="logo" id="south-street-logo">
+                    <img src="/assests/south street.png">
+                </div>
+                <h3 class="designation  m0 m-blue"> Founding Member </h3>
+                <h4 class="company-name"> South Street </h4>
+                <h5 class="duration"> July 2021 - January 2022 </h5>
+                <p class="description">
+                    As a founding member of a South Indian restaurant, I successfully managed all aspects of staff
+                    coordination and procurement of essential supplies, ensuring the smooth and efficient operation
+                    of the establishment. My leadership and operational skills played a pivotal role in establishing
+                    and maintaining the restaurant's high standards of service and quality.
+                </p>
+            </div>
+            <div class="box">
+                <div class="logo">
+                    <img src="/assests/nirmal bags_1.jpg">
+                </div>
+                <h3 class="designation  m0 m-blue"> Founder/Owner </h3>
+                <h4 class="company-name"> Nirmal Bags </h4>
+                <h5 class="duration"> September 2019 - March 2021 </h5>
+                <p class="description">
+                    Proficiently managed a business specializing in eco-friendly non-woven carry
+                    bag manufacturing and printing, alongside the production of high-quality N95 and 3-ply face
+                    masks.
+                </p>
+            </div>
+            <div class="box">
+                <div class="logo" id="maptec-logo">
+                    <img src="/assests/maptec.jpg">
+                </div>
+                <h3 class="designation  m0 m-blue"> Asst. Project Engineer </h3>
+                <h4 class="company-name">Maptec Survey Consultancy</h4>
+                <h5 class="duration"> July 2018 - June 2019 </h5>
+                <p class="description">
+                    Established a city gas power station, including the design and construction for HP Oil and Gas
+                    Pvt Ltd, Ambala. Managed and coordinated a team of
+                    engineers and technicians, and ensured that the project was completed on time and within budget.
+                </p>
+            </div>
+            <div class="divider">
+                <div class="traveller">
+                    <i class="fa-sharp fa-solid fa-plane"></i>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!--JavaScript at end of body for optimized loading-->
     <script src="/Scripts/app.js"></script>
