Styling of experience section and its svg image

--- a/experience.html
+++ b/experience.html
@@ -56,7 +56,7 @@
 
             <div class="box">
                 <div class="logo" id="south-street-logo">
-                    <img src="/assests/south street.png">
+                    <img src="/images/south street.png">
                 </div>
                 <h3 class="designation  m0 m-blue"> Founding Member </h3>
                 <h4 class="company-name"> South Street </h4>
@@ -70,7 +70,7 @@
             </div>
             <div class="box">
                 <div class="logo">
-                    <img src="/assests/nirmal bags_1.jpg">
+                    <img src="/images/nirmal bags_1.jpg">
                 </div>
                 <h3 class="designation  m0 m-blue"> Founder/Owner </h3>
                 <h4 class="company-name"> Nirmal Bags </h4>
@@ -83,7 +83,7 @@
             </div>
             <div class="box">
                 <div class="logo" id="maptec-logo">
-                    <img src="/assests/maptec.jpg">
+                    <img src="/images/maptec.jpg">
                 </div>
                 <h3 class="designation  m0 m-blue"> Asst. Project Engineer </h3>
                 <h4 class="company-name">Maptec Survey Consultancy</h4>
