Added svg image to education section

--- a/education.html
+++ b/education.html
@@ -255,12 +255,16 @@
     <section class="s2">
         <div class="container-sm  edSection">
             <div class="conatiner text-center mb-5">
-                <h1 class="head" data-aos="fade-up" data-aos-delay="300">Formal
-                    <span class="edu_background">Education</span>
+                <h1 class="head" data-aos="fade-up" data-aos-delay="300">
+                    <span>
+                        <i class="fa-solid fa-graduation-cap"></i>
+                    </span>
+                    Formal&nbsp;<span class="edu_background">Education</span>
                 </h1>
             </div>
     </section>
 
+    <!-- Education Container -->
     <section id="education">
         <div class="box-container">
             <div class="box">
