Style of both education and experience Heading

--- a/education.html
+++ b/education.html
@@ -241,8 +241,7 @@
                         class="px-md-5 p-3 col-md-6 d-flex flex-column align-items-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
                         <h2 class="dropdown1 main-heading mb-0 education_head">Educational <span
                                 class="edu_background">Background</span></h2>
-                        <p
-                            class="dropdown2 pre-heading font-weight-bolder text-center animate__animated animate__fadeInUp animate__delay-2s">
+                        <p class="dropdown2 pre-heading font-weight-bolder text-center animate__animated animate__fadeInUp animate__delay-2s">
                             An investment in knowledge pays the best interest. – Benjamin Franklin
                         </p>
                     </div>
@@ -252,7 +251,7 @@
     </div>
 
     <!-- Education Heading  -->
-    <section class="s2">
+    <div class="s2">
         <div class="container-sm  edSection">
             <div class="conatiner text-center mb-5">
                 <h1 class="head" data-aos="fade-up" data-aos-delay="300">
@@ -262,7 +261,8 @@
                     Formal&nbsp;<span class="edu_background">Education</span>
                 </h1>
             </div>
-    </section>
+        </div>
+    </div>
 
     <!-- Education Container -->
     <section id="education">
