Updated code format structure

--- a/education.html
+++ b/education.html
@@ -241,7 +241,8 @@
                         class="px-md-5 p-3 col-md-6 d-flex flex-column align-items-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
                         <h2 class="dropdown1 main-heading mb-0 education_head">Educational <span
                                 class="edu_background">Background</span></h2>
-                        <p class="dropdown2 pre-heading font-weight-bolder text-center animate__animated animate__fadeInUp animate__delay-2s">
+                        <p
+                            class="dropdown2 pre-heading font-weight-bolder text-center animate__animated animate__fadeInUp animate__delay-2s">
                             An investment in knowledge pays the best interest. – Benjamin Franklin
                         </p>
                     </div>
@@ -269,7 +270,7 @@
         <div class="box-container">
             <div class="box">
                 <h3 class="designation  m0 m-blue"> React Js </h3>
-                <h4 class="company-name"> Coding ninjas </h4>
+                <h4 class="company-name"> Coding Ninjas </h4>
                 <h5 class="duration"> January 2023 </h5>
                 <p class="certificate">
                     <a href="https://certificate.codingninjas.com/verify/72860c176d02893d" target="_blank"
@@ -282,8 +283,8 @@
                     real-time web applications. Utilized React Router for seamless navigation and user-friendly
                     interfaces, showcasing expertise in front-end development.
                 </p>
-
             </div>
+
             <div class="box">
                 <h3 class="designation  m0 m-blue">Front-End Development</h3>
                 <h4 class="company-name"> Coding Ninjas </h4>
@@ -299,6 +300,7 @@
                     crafting interactive web applications.
                 </p>
             </div>
+
             <div class="box">
                 <h3 class="designation  m0 m-blue">Bachelor of Engineering (EEE) </h3>
                 <h4 class="company-name"> New Horizon College of Engg. Bangalore </h4>
@@ -309,6 +311,7 @@
                     processing.
                 </p>
             </div>
+
             <div class="divider">
                 <div class="traveller">
                     <i class="fas fa-car-side"></i>
