Style of header in education section

--- a/education.html
+++ b/education.html
@@ -84,7 +84,7 @@
                 background="transparent" speed="1" style="width: 500px; height: 500px;" loop
                 autoplay></dotlottie-player>
         </div>
-        <div>
+        <div class="quote">
             <h2 class="education_head">Educational <span class="edu_background">Background</span></h2>
             <p class="education_head">An investment in knowledge pays the best interest. - Benjamin Franklin</p>
         </div>
