updated experience section with new html and style

--- a/education.html
+++ b/education.html
@@ -46,35 +46,6 @@
     </div>
 
     <!--Header Section-->
-    <!-- <div class="container pt-5" style="width: 100%; min-height: 80%;">
-        <section style="height: 90vh;">
-            <div class="container-fluid px-3 pt-5">
-                <div class="row mx-auto">
-                    <div class="godown col-md-6">
-                        <div class="img-fluid d-block  animate__animated animate__zoomIn animate__delay-1s">
-                            <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
-                                type="module"></script>
-
-                            <dotlottie-player
-                                src="https://lottie.host/71414e48-e1f1-4fb2-bc8f-bc615daeb9ca/ZXZlrriU3r.json"
-                                background="transparent" speed="1" style="width: 600px; height: 600px;" loop
-                                autoplay></dotlottie-player>
-                        </div>
-                    </div>
-                    <div
-                        class="px-md-5 p-3 col-md-6 d-flex flex-column align-items-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
-                        <h2 class="dropdown1 main-heading mb-0 education_head">Educational <span
-                                class="edu_background">Background</span></h2>
-                        <p
-                            class="dropdown2 pre-heading font-weight-bolder text-center animate__animated animate__fadeInUp animate__delay-2s">
-                            An investment in knowledge pays the best interest. – Benjamin Franklin
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div> -->
-
     <section class="header">
         <div class="header-img">
             <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
@@ -86,7 +57,7 @@
         </div>
         <div class="quote">
             <h2 class="education_head">Educational <span class="edu_background">Background</span></h2>
-            <p class="education_head">An investment in knowledge pays the best interest. - Benjamin Franklin</p>
+            <p class="education_head">An investment in knowledge pays the best interest. -<br> Benjamin Franklin</p>
         </div>
     </section>
 
