Style of Projects in portfolio

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
                 background="transparent" speed="1" style="width: 500px; height: 500px;" loop
                 autoplay></dotlottie-player>
         </div>
-        <div class="quote" style="width:45%;">
+        <div class="quote" style="width:45%; margin-top: 100px;">
             <p class="education_head">My projects makes use of vast variety of latest technology tools. My best
                 experience is to create front end projects and Unleashing the Power of Imagination through Seamless,
                 Sensational, and User-Centric Web Experiences!</p>
@@ -91,7 +91,6 @@
                     A fully functional Amazon clone built with <span>React</span>, <span>Tailwind
                         CSS</span>,<span> Redux Toolkit</span>, <span>Firebase</span>, Framer Motion and more!
                 </h4>
-                <h3>Feathers :</h3>
                 <ul>
                     <li>Product Listings, Product Search and Product Details.</li>
                     <li>User Registration and Login.</li>
@@ -100,6 +99,38 @@
                     <li>Sort based on High Price, Low Price and Rating.</li>
                     <li>Order History, Cancel and Return Order.</li>
                     <li>Save Multiple Addresses.</li>
+                </ul>
+            </div>
+        </div>
+        
+        <div class="portfolio-details-container">
+            <div class="portfolio-image">
+                <a href="https://netflix-clone-five-neon.vercel.app/" target="_blank">
+                    <img src="/images/NetFlix Image.png">
+                </a>
+            </div>
+            <div class="portfolio-details">
+                <h2>Netflix Clone</h2>
+                <h4>
+                    A fully functional Netflix Clone Web application developed using
+                    <span>TMDB API</span>, <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
+                </h4>
+                <ul>
+                    <li>
+                        Search for movies and TV shows.
+                    </li>
+                    <li>
+                        View movie and TV show details.
+                    </li>
+                    <li>
+                        Favorite Movies Page.
+                    </li>
+                    <li>
+                        Add movies and TV shows to Favorites.
+                    </li>
+                    <li>
+                        Remove movies and TV shows from Favorites.
+                    </li>
                 </ul>
             </div>
         </div>
@@ -120,7 +151,6 @@
                     E-commerce web application built with <span>React</span>, <span>Tailwind CSS</span>,
                     <span>Rest APIs</span> and <span>Local Storage</span>.
                 </h4>
-                <h3>Feathers :</h3>
                 <ul>
                     <li>Browse a list of products.</li>
                     <li>View detailed product information.</li>
@@ -132,38 +162,7 @@
                 </ul>
             </div>
         </div>
-        <div class="portfolio-details-container">
-            <div class="portfolio-image">
-                <a href="https://netflix-clone-five-neon.vercel.app/" target="_blank">
-                    <img src="/images/NetFlix Image.png">
-                </a>
-            </div>
-            <div class="portfolio-details">
-                <h2>Netflix Clone</h2>
-                <h4>
-                    A fully functional Netflix Clone Web application developed using
-                    <span>TMDB API</span>, <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
-                </h4>
-                <h3>Feathers :</h3>
-                <ul>
-                    <li>
-                        Search for movies and TV shows.
-                    </li>
-                    <li>
-                        View movie and TV show details.
-                    </li>
-                    <li>
-                        Favorite Movies Page.
-                    </li>
-                    <li>
-                        Add movies and TV shows to Favorites.
-                    </li>
-                    <li>
-                        Remove movies and TV shows from Favorites.
-                    </li>
-                </ul>
-            </div>
-        </div>
+
         <div class="portfolio-details-container">
             <div class="portfolio-image">
                 <a href="https://kumardinesh1908.github.io/Todo-List-App/" target="_blank"
@@ -180,7 +179,6 @@
                     A ToDO Liat web application implemented using <span>JavaScript</span>, <span>HTML</span> and
                     <span>CSS</span>.
                 </h4>
-                <h3>Feathers :</h3>
                 <ul>
                     <li>Add tasks to the list.</li>
                     <li>Mark tasks as completed.</li>
@@ -192,6 +190,7 @@
                 </ul>
             </div>
         </div>
+
         <div class="portfolio-details-container">
             <div class="portfolio-image">
                 <a href="https://kumardinesh1908.github.io/Weather-App/" target="_blank"
@@ -208,7 +207,6 @@
                     Developed a real-time weather web application using <span>HTML</span>, <span>CSS</span> and
                     <span>JavaScript</span>.
                 </h4>
-                <h3>Feathers :</h3>
                 <ul>
                     <li>
                         Displays weather conditions.
@@ -225,6 +223,7 @@
                 </ul>
             </div>
         </div>
+
         <div class="portfolio-details-container">
             <div class="portfolio-image">
                 <a href="https://kumardinesh1908.github.io/Calculator/" target="_blank"
@@ -240,7 +239,6 @@
                 <h4>
                     Implemented using <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
                 </h4>
-                <h3>Feathers :</h3>
                 <ul>
                     <li> Addition (+)</li>
                     <li>Subtraction (-)</li>
@@ -253,6 +251,7 @@
                 </ul>
             </div>
         </div>
+
         <div class="portfolio-details-container">
             <div class="portfolio-image">
                 <a href="https://kumardinesh1908.github.io/Tic-Tac-Toe/" target="_blank"
@@ -268,7 +267,6 @@
                 <h4>
                     Implemented using <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
                 </h4>
-                <h3>Feathers :</h3>
                 <ul>
                     <li>
                         2-player gameplay.
@@ -288,6 +286,7 @@
                 </ul>
             </div>
         </div>
+
         <div class="portfolio-details-container">
             <div class="portfolio-image">
                 <a href="https://kumardinesh1908.github.io/Analog-and-Digital-Clock/" target="_blank"
@@ -303,7 +302,6 @@
                 <h4>
                     Developed using <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.
                 </h4>
-                <h3>Feathers :</h3>
                 <ul>
                     <li>
                         Dynamic Analog Clock hands Representation.
