--- a/skills.html
+++ b/skills.html
@@ -21,6 +21,7 @@
     <!-- External CSS Links -->
     <link rel="stylesheet" href="/Styles/preloader.css">
     <link rel="stylesheet" href="/Styles/app.css">
+    <link rel="stylesheet" href="/Styles/skills.css">
 
     <!-- Font Awesome Icons -->
     <script src='https://kit.fontawesome.com/1f2bb007df.js'></script>
@@ -44,6 +45,7 @@
         </div>
     </div>
 
+    <!-- Center data -->
     <section id="skills">
         <h1 class="section-heading">
             <span>
@@ -89,9 +91,6 @@
             <div class="empty-circle circle-5"></div>
         </div>
     </section>
-
-
-    <!-- Center data -->
 
     <!--JavaScript at end of body for optimized loading-->
     <script src="/Scripts/app.js"></script>
