Added Header of Skills

--- a/skills.html
+++ b/skills.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/Styles/preloader.css">
     <link rel="stylesheet" href="/Styles/app.css">
     <link rel="stylesheet" href="/Styles/skills.css">
+    <link rel="stylesheet" href="/Styles/education&experience.css">
 
     <!-- Font Awesome Icons -->
     <script src='https://kit.fontawesome.com/1f2bb007df.js'></script>
@@ -45,14 +46,34 @@
         </div>
     </div>
 
-    <!-- Center data -->
-    <section id="skills">
-        <h1 class="section-heading">
+    <!--Header Section-->
+    <section class="header">
+        <div class="header-img">
+            <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+                type="module"></script>
+
+            <dotlottie-player src="https://lottie.host/a76d92e4-48fc-4fa5-8b3f-f0d3a07a8521/Q6qfs6AQWi.json"
+                background="transparent" speed="1" style="width: 558px; height: 500px;" loop
+                autoplay></dotlottie-player>
+        </div>
+        <div class="quote">
+            <h2 class="education_head"><span class="edu_background">Background</span></h2>
+            <p class="education_head">Making good decisions is a crucial skill at every level. -<br> Peter Drucker</p>
+        </div>
+    </section>
+
+    <!-- Education Heading  -->
+    <div class="main-heading">
+        <h1 class="head">
             <span>
                 <i class="fas fa-chalkboard-teacher"></i>
             </span>
-            <span id="skills-heading">SKILLS</span>
+            Technical&nbsp;<span class="edu_background">SKILLS</span>
         </h1>
+    </div>
+
+    <!-- Center data -->
+    <section id="skills">
         <div class="all-skills">
             <div class="web">
                 <span id="web">web</span>
