--- a/skills.html
+++ b/skills.html
@@ -115,6 +115,7 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script src="/Scripts/app.js"></script>
+    <script src="/Scripts/skills.js"></script>
 
     <!-- Bootstrap Library -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
