--- a/skills.html
+++ b/skills.html
@@ -53,11 +53,11 @@
                 type="module"></script>
 
             <dotlottie-player src="https://lottie.host/a76d92e4-48fc-4fa5-8b3f-f0d3a07a8521/Q6qfs6AQWi.json"
-                background="transparent" speed="1" style="width: 558px; height: 500px;" loop
+                background="transparent" speed="1" style="width: 658px; height: 600px; margin-top: -50px;" loop
                 autoplay></dotlottie-player>
         </div>
         <div class="quote">
-            <h2 class="education_head"><span class="edu_background">Background</span></h2>
+            <h2 class="education_head">Technical&nbsp;<span class="edu_background">Skillset</span></h2>
             <p class="education_head">Making good decisions is a crucial skill at every level. -<br> Peter Drucker</p>
         </div>
     </section>
