Made Experience Page Responsive

--- a/experience.html
+++ b/experience.html
@@ -46,13 +46,13 @@
     </div>
 
     <!--Header Section-->
-    <section class="header" style="margin-bottom: -50px;">
+    <section class="header">
         <div class="header-img">
             <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
                 type="module"></script>
 
             <dotlottie-player src="https://lottie.host/6cab3b5e-6e48-4b76-a5cc-0e5b7ae51d41/ZhClO6GgFm.json"
-                background="transparent" speed="1" style="width: 600px; height: 600px; margin-top: -50px;" loop
+                background="transparent" speed="1" class="experience-img" loop
                 autoplay></dotlottie-player>
         </div>
         <div class="quote">
@@ -78,8 +78,8 @@
                 <div class="logo" id="south-street-logo">
                     <img src="/images/south street.png">
                 </div>
-                <h3 class="designation  m0 m-blue"> Founding Member </h3>
-                <h4 class="company-name"> South Street </h4>
+                <h3 class="designation"> Founding Member </h3>
+                <h4 class="company-name south"> South Street </h4>
                 <h5 class="duration"> July 2021 - January 2022 </h5>
                 <p class="description">
                     As a founding member of a South Indian restaurant, I successfully managed all aspects of staff
@@ -94,7 +94,7 @@
                     <img src="/images/nirmal bags_1.jpg">
                 </div>
                 <h3 class="designation  m0 m-blue"> Founder/Owner </h3>
-                <h4 class="company-name"> Nirmal Bags </h4>
+                <h4 class="company-name nirmal"> Nirmal Bags </h4>
                 <h5 class="duration"> September 2019 - March 2021 </h5>
                 <p class="description">
                     Proficiently managed a business specializing in eco-friendly non-woven carry
@@ -108,7 +108,7 @@
                     <img src="/images/maptec.jpg">
                 </div>
                 <h3 class="designation  m0 m-blue"> Asst. Project Engineer </h3>
-                <h4 class="company-name">Maptec Survey Consultancy</h4>
+                <h4 class="company-name maptec">Maptec Survey Consultancy</h4>
                 <h5 class="duration"> July 2018 - June 2019 </h5>
                 <p class="description">
                     Established a city gas power station, including the design and construction for HP Oil and Gas
