Made Education header section Responsive

--- a/education.html
+++ b/education.html
@@ -47,12 +47,12 @@
 
     <!--Header Section-->
     <section class="header">
-        <div class="header-img">
+        <div class="education-img">
             <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
                 type="module"></script>
 
             <dotlottie-player src="https://lottie.host/71414e48-e1f1-4fb2-bc8f-bc615daeb9ca/ZXZlrriU3r.json"
-                background="transparent" speed="1" style="width: 500px; height: 500px;" loop
+                background="transparent" speed="1" class="education-video" loop
                 autoplay></dotlottie-player>
         </div>
         <div class="quote">
