--- a/experience.html
+++ b/experience.html
@@ -47,12 +47,12 @@
 
     <!--Header Section-->
     <section class="header">
-        <div class="header-img">
+        <div class="experience-img">
             <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
                 type="module"></script>
 
             <dotlottie-player src="https://lottie.host/6cab3b5e-6e48-4b76-a5cc-0e5b7ae51d41/ZhClO6GgFm.json"
-                background="transparent" speed="1" class="experience-img" loop
+                background="transparent" speed="1" class="experience-video" loop
                 autoplay></dotlottie-player>
         </div>
         <div class="quote">
