Made Education page Responsive

--- a/education.html
+++ b/education.html
@@ -93,7 +93,7 @@
 
             <div class="box">
                 <h3 class="designation  m0 m-blue">Front-End Development</h3>
-                <h4 class="company-name"> Coding Ninjas </h4>
+                <h4 class="company-name front-end"> Coding Ninjas </h4>
                 <h5 class="duration"> September 2022 </h5>
                 <p class="certificate">
                     <a href="https://certificate.codingninjas.com/verify/ec2e66dfcc79f4b0" target="_blank"
@@ -118,8 +118,8 @@
                 </p>
             </div>
 
-            <div class="divider">
-                <div class="traveller">
+            <div class="edu-divider">
+                <div class="edu-traveller">
                     <i class="fas fa-car-side"></i>
                 </div>
             </div>
