--- a/experience.html
+++ b/experience.html
@@ -117,8 +117,8 @@
                 </p>
             </div>
 
-            <div class="divider">
-                <div class="traveller">
+            <div class="exp-divider">
+                <div class="exp-traveller">
                     <i class="fa-sharp fa-solid fa-plane"></i>
                 </div>
             </div>
